fix header spacing

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .App-header {
   background-color: #282c34;
-  
+  margin-top: 50px;
   min-height: 35vh;
   display: flex;
   flex-direction: column;
